# signway

./: .dockerignore  404.html  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  intro.html  openai.html  print.html  searchindex.js  searchindex.json  usage.html
.github/workflows/: docs.yml  test-lint-release.yml  test-lint.yml  test-tag.yml
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  openai.md  usage.md
server/: Cargo.toml
server/src/: _test_tools.rs  body.rs  gateway_callbacks.rs  gateway_middleware.rs  lib.rs  monitoring.rs  route_cors.rs  route_gateway.rs  secret_getter.rs  server.rs  signway_response.rs  sw_body.rs
server/src/signing/: mod.rs  sign_request.rs  signing_functions.rs  unverified_signed_request.rs  url_signer.rs
src/: _test_tools.rs  body.rs  main.rs  route_gateway.rs  server.rs  sign_request.rs  signer.rs  signing.rs
src/secret_getter/: in_memory_secret_getter.rs  mod.rs
src/signing/: mod.rs  sign_request.rs  signing_functions.rs  url_signer.rs
