[package]
name = "signed-url-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.6"
time = { version = "0.3.6", features = ["formatting", "macros"] }
percent-encoding = "2.2.0"
