[package]
name = "signway"
version = "0.4.3"
edition = "2021"

[workspace]
members = ["server"]

[dependencies]
signway-server = { path = "server" }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "^0.1.37"
tracing-subscriber = { version = "0.3.16", features = ['json']}
anyhow = "^1.0.71"
async-trait = "0.1.68"
clap = { version = "4.0.22", features = ["derive"] }
