[package]
name = "signway-server"
version = "0.4.8"
description = "A gateway for redirecting authentic signed URLs to the requested API"
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] } # NOTE: neeeded for cross compilations
hyper = { version = "^1.0.1", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["full"]}
hyper-tls = "0.6.0"
tokio = { version = "^1.34.0", features = ["full"] }
url = "^2.3.1"
anyhow = "^1.0.71"
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
hex = "^0.4.3"
hmac = "^0.12.1"
sha2 = "^0.10.6"
time = { version = "^0.3.6", features = ["formatting", "macros", "parsing"] }
percent-encoding = "^2.2.0"
tracing = "^0.1.37"
async-trait = "^0.1.68"
futures-util = "0.3.29"
bytes = "1.5.0"

[dev-dependencies]
lazy_static = "^1.4.0"
reqwest = { version = "^0.11.22", features = ["json"] }
